--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,14 @@ img { max-width: 100%; }
 .whitetxt {
 	color: #ffffff;
 }
+/* Overriding css priorities by using id*/
+#whitetxt1 {
+	color: #ffffff;
+}
+
+#whitetxt2 {
+	color: #ffffff;
+}
 
 .section-container {
     margin: 0 auto;
