more faqpage changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ img { max-width: 100%; }
 
 /***** General style, all sections *****/
 
-#faqbutton {
+.faqbutton {
 	width: 88px;
 	height: 88px;
 	padding-top: 10px;
